k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sw2p2-backend-service
spec:
  type: ClusterIP
  selector:
    app: sw2p2-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
