k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sw2p2-backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mlearning.sw2ficct.lat
    secretName: sw2p2-tls
  rules:
  - host: mlearning.sw2ficct.lat
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sw2p2-backend-service
            port:
              number: 80
